--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 clap = "2.33.3"
 termion = "1.5.6"
 tui = "0.15.0"
+rust_traq = { git = "https://github.com/hosshii/rust_traq.git", branch = "main" }
