--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ clap = "2.33.3"
 termion = "1.5.6"
 tui = "0.15.0"
 rust_traq = { git = "https://github.com/hosshii/rust_traq.git", branch = "main" }
+rand = "0.8.3"
+webbrowser = "0.5.5"
+tokio = { version = "0.2.2", features = ["full"] }
