--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ anyhow = "1.0.40"
 futures = "0.3.15"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+unicode-width = "0.1.8"
