--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ futures = "0.3.15"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 unicode-width = "0.1.8"
+indicatif = "0.16.2"
