--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 unicode-width = "0.1.8"
 indicatif = "0.16.2"
+ring = "0.16.20"
+data-encoding = "2.3.2"
